@startuml Diagrama ER Inicial (Versão Papel)
!theme plain
skinparam roundcorner 5
skinparam shadowing false
skinparam linetype ortho

title Diagrama Entidade-Relação — Versão Inicial (Papel)

entity "Licenciatura" as L {
  * id : int <<PK>>
  --
  nome : varchar
  sigla : varchar
  descricao : text
  departamento : varchar
  ects_total : int
  duracao_anos : int
  url_oficial : varchar
}

entity "Docente" as D {
  * id : int <<PK>>
  --
  nome : varchar
  url_pagina_lusofona : varchar
  foto : image
}

entity "UnidadeCurricular" as UC {
  * id : int <<PK>>
  --
  nome : varchar
  sigla : varchar
  descricao : text
  ects : decimal
  imagem : image
  ano_curricular : int
  semestre : varchar
  licenciatura_id : int <<FK>>
}

entity "Tecnologia" as T {
  * id : int <<PK>>
  --
  nome : varchar
  tipo : varchar
  descricao : text
  logo : image
  url_oficial : varchar
  nivel_interesse : int [1-5]
}

entity "Projeto" as P {
  * id : int <<PK>>
  --
  titulo : varchar
  descricao : text
  ambito : varchar
  conceitos_aplicados : text
  url_github : varchar
  url_demo : varchar
  imagem : image
  ano : int
  uc_id : int <<FK>>
}

entity "TFC" as TFC {
  * id : int <<PK>>
  --
  * titulo : varchar
  resumo : text
  ano : int
  area_tematica : varchar
  url_repositorio : varchar
  nivel_interesse : int
  imagem : image
}

entity "Competencia" as C {
  * id : int <<PK>>
  --
  nome : varchar
  categoria : varchar
  descricao : text
  nivel : int [1-5]
}

entity "Formacao" as F {
  * id : int <<PK>>
  --
  titulo : varchar
  instituicao : varchar
  data_inicio : date
  data_fim : date
  certificado : image
  tipo : varchar
}

entity "ExperienciaProfissional" as EP {
  * id : int <<PK>>
  --
  empresa : varchar
  cargo : varchar
  tipo : varchar
  descricao : text
  data_inicio : date
  data_fim : date
}

entity "MakingOf" as MO {
  * id : int <<PK>>
  --
  titulo : varchar
  descricao : text
  decisoes : text
  erros_correcoes : text
  data_registo : datetime
  entidade_referida : varchar
  foto_papel : image
  uso_ia : text
}

' ═══════════════════════════════════════
' RELAÇÕES (versão inicial desenhada no papel)
' ═══════════════════════════════════════

' Licenciatura 1:N UnidadeCurricular
' (na versão inicial, uma UC pertence a uma só licenciatura)
L ||--o{ UC : "1:N  tem"

' UnidadeCurricular M:N Docente
UC }o--o{ D : "M:N  lecionada por"

' Projeto N:1 UnidadeCurricular
UC ||--o{ P : "1:N  origina"

' Projeto M:N Tecnologia
P }o--o{ T : "M:N  usa"

' TFC N:1 Licenciatura
L ||--|| TFC : "1:1  pertence a"

' TFC N:1 Docente (orientador)
TFC }o--|| D : "N:1  orientado por"

' TFC M:N Tecnologia
TFC }o--o{ T : "M:N  usa"

' Competencia M:N Projeto
C }o--o{ P : "M:N  demonstrada em"

' Competencia M:N Formacao
C }o--o{ F : "M:N  adquirida em"

' ExperienciaProfissional M:N Tecnologia
EP }o--o{ T : "M:N  utiliza"

' ExperienciaProfissional M:N Competencia
EP }o--o{ C : "M:N  requer"

@enduml
